--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "taskmanager",
   "version": "1.0.0",
   "description": "Simple task manager with NodeJS and Express",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,13 @@
   "bugs": {
     "url": "https://github.com/jonathanbc10/taskManager/issues"
   },
-  "homepage": "https://github.com/jonathanbc10/taskManager#readme"
+  "homepage": "https://github.com/jonathanbc10/taskManager#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.13"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.10"
+  }
 }
